<resources>
    <string name="app_name">oboolo</string>
    <string name="title_add_event">Ajouter un évènement</string>
    <string name="title_day_planning">Planning jour</string>
    <string name="title_week_planning">Planning semaine</string>
    <string name="title_courses">Matières</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Connexion</string>
    <string name="action_sign_in_short">Connexion</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!--Strings related to event edition-->
    <string name="add_event">Add an event</string>
    <string name="edit_event">Edit event</string>
    <string name="event_date">Date</string>
    <string name="event_beginning">Time</string>
    <string name="event_type">Type</string>
    <string name="event_subject">Subject</string>
    <string name="event_frequency">Frequency</string>
    <string name="event_validate">Confirm</string>

    <!--Strings related to settings -->
    <string name="settings_title">Settings</string>
    <string name="settings_notification">Notifications</string>
    <string name="settings_beginAt">Begin at</string>
    <string name="settings_endAt">End at</string>
    <string name="settings_profile">I\'m kind of a(n)</string>
    <string name="settings_early">Early bird</string>
    <string name="settings_late">Night owl</string>

    <!--Strings related to courses and subjects-->
    <string name="subject_affinity">Affinity</string>
    <string name="subject_affinity_low">Not a fan</string>
    <string name="subject_affinity_high">Best thing ever</string>
    <string name="subject_work">Amount of required work</string>
    <string name="subject_work_low">Few</string>
    <string name="subject_work_high">Lot</string>
    <string name="subject_target">Desired score</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button">Button</string>
</resources>
