<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="50dp"
    android:paddingRight="25dp">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/subject_affinity"
        android:textSize="@dimen/subject_subitem_text_size"
        android:paddingLeft="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:text="@string/subject_affinity_low"
            android:textSize="@dimen/subject_subitem_text_size"/>
        <SeekBar
            android:id="@+id/subject_affinity_seekbar"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:max="10"
            android:min="0"
            android:layout_gravity="center_vertical"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:layout_gravity="center_vertical"
            android:text="@string/subject_affinity_high"
            android:textSize="@dimen/subject_subitem_text_size"/>
    </LinearLayout>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/subject_work"
        android:textSize="@dimen/subject_subitem_text_size"
        android:paddingLeft="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:text="@string/subject_work_low"
            android:textSize="@dimen/subject_subitem_text_size"/>
        <SeekBar
            android:id="@+id/subject_work_seekbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:max="10"
            android:min="0"
            android:layout_gravity="center_vertical"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:layout_gravity="center_vertical"
            android:text="@string/subject_work_high"
            android:textSize="@dimen/subject_subitem_text_size"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/subject_target_checkbox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/subject_target"
            android:textSize="@dimen/subject_subitem_text_size"/>

        <EditText
            android:id="@+id/subject_target_edittext"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:clickable="true"
            android:textSize="@dimen/subject_subitem_text_size"
            android:ems="10"
            android:inputType="number" />
    </LinearLayout>

</LinearLayout>