<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

    <ImageView
        android:id="@+id/settings_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:srcCompat="@drawable/ic_settings_black_24dp"
        android:layout_gravity="center"/>
    <TextView
        android:id="@+id/settings_titletext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/settings_title"
        android:textAlignment="center"
        android:textSize="@dimen/event_text_size_big"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <TableRow
            android:layout_height="match_parent">
            <CheckBox
                android:id="@+id/settings_notification_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:text="@string/settings_notification"
                android:textSize="@dimen/event_text_size"/>
        </TableRow>
        <TableRow
            android:layout_height="match_parent">
            <CheckBox
                android:id="@+id/settings_beginAt_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/settings_beginAt"
                android:textSize="@dimen/event_text_size"/>

            <Space
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/settings_beginAt_editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:inputType="time"
                android:ems="10"
                android:textSize="@dimen/event_text_size"
                android:clickable="true"
                android:focusable="false"/>
        </TableRow>
        <TableRow
            android:layout_height="match_parent">
            <CheckBox
                android:id="@+id/settings_endAt_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/settings_endAt"
                android:textSize="@dimen/event_text_size"/>

            <Space
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/settings_endAt_editText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:inputType="time"
                android:ems="10"
                android:textSize="@dimen/event_text_size"
                android:clickable="true"
                android:focusable="false"/>
        </TableRow>
    </TableLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <TextView
        android:id="@+id/settings_profile_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/settings_profile"
        android:textAlignment="center"
        android:textSize="@dimen/event_text_size"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/settings_early_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/settings_early"
            android:textAlignment="center"
            android:textSize="@dimen/event_text_size"/>
        <SeekBar
            android:id="@+id/settings_profile_seekbar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="3"/>
        <TextView
            android:id="@+id/settings_late_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/settings_late"
            android:textSize="@dimen/event_text_size"/>
    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>
</LinearLayout>