<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textAddSchedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Ajouter un creneau"
        android:textSize="@dimen/event_text_size_big"
        android:gravity="center"
        android:layout_weight="1"/>

    <Space
        android:layout_weight="0.5"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8">
        <TableRow
            android:layout_weight="1">
            <TextView
                android:id="@+id/addDateText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/event_date"
                android:textSize="@dimen/event_text_size"
                android:gravity="end"
                />
            <Space
                android:layout_weight="0.5"
                android:layout_width="0dp"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/addDateEdit"
                android:textSize="@dimen/event_text_size"
                android:focusable="false"
                android:clickable="true"/>

            <Space
                android:layout_weight="0.5"
                android:layout_width="match_parent"
                android:layout_height="0dp"/>
        </TableRow>
        <TableRow
            android:layout_weight="1">
            <TextView
                android:id="@+id/addBeginningText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/event_beginning"
                android:textSize="@dimen/event_text_size"
                android:gravity="end"
                android:layout_marginRight="5dp"
                />


            <Space
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"/>


            <EditText
                android:id="@+id/addBeginningEdit"
                android:layout_height="wrap_content"
                android:layout_width="6dp"
                android:layout_weight="1.5"
                android:clickable="true"
                android:textSize="@dimen/event_text_size"
                android:ems="10"
                android:focusable="false"
                android:inputType="time" />
            <TextView
                android:id="@+id/addEndText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="To"
                android:textSize="@dimen/event_text_size"
                android:gravity="center"
                />

            <EditText
                android:layout_width="6dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:inputType="time"
                android:ems="10"
                android:id="@+id/addEndEdit"
                android:textSize="@dimen/event_text_size"
                android:clickable="true"
                android:focusable="false"/>
            <Space
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp"/>
        </TableRow>
        <TableRow
            android:layout_weight="1">
            <TextView
                android:id="@+id/addTypeText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/event_type"
                android:textSize="@dimen/event_text_size"
                android:gravity="end"
                />
            <Space
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="match_parent" />

            <Spinner
                android:id="@+id/addTypeSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:spinnerMode="dropdown"
                android:textSize="@dimen/event_text_size">

            </Spinner>
            <Space
                android:layout_weight="0.5"
                android:layout_width="match_parent"
                android:layout_height="0dp"/>
        </TableRow>
        <TableRow
            android:layout_weight="1">
            <TextView
                android:id="@+id/addCourseText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/event_subject"
                android:textSize="@dimen/event_text_size"
                android:gravity="end"
                />
            <Space
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="match_parent" />

            <Spinner
                android:id="@+id/addCourseSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="@dimen/event_text_size">

            </Spinner>
            <Space
                android:layout_weight="0.5"
                android:layout_width="match_parent"
                android:layout_height="0dp"/>
        </TableRow>
        <TableRow
            android:layout_weight="1">
            <TextView
                android:id="@+id/addFrequencyText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/event_frequency"
                android:textSize="@dimen/event_text_size"
                android:gravity="end"
                />
            <Space
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="match_parent" />

            <Spinner
                android:id="@+id/addFrequencySpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="@dimen/event_text_size">

            </Spinner>
            <Space
                android:layout_weight="0.5"
                android:layout_width="match_parent"
                android:layout_height="0dp"/>
        </TableRow>
    </TableLayout>

    <Space
        android:layout_weight="0.5"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

    <Button
        android:id="@+id/addButtonValidate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/event_validate"
        android:textSize="@dimen/event_text_size_big" />



    <Space
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>


</LinearLayout>